--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,10 @@ name = "pypi"
 
 [packages]
 django = "*"
+django-debug-toolbar = "*"
+mysqlclient = "*"
 
 [dev-packages]
-pycodestyle = "*"
-autopep8 = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.9"
