--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^5.0.2"
+django-debug-toolbar = "^4.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
