--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0.2"
 django-debug-toolbar = "^4.3.0"
+django-environ = "^0.11.2"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
